--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,32 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <meta charset="UTF-8"/>
+  <meta charset="UTF-8" />
   <script defer src="main.js"></script>
   <style>
-      html, body {
-        height: 100%;
-        margin: 0;
-      }
-      body {
-        background-color: #fff;
-        font-family: sans-serif;
-        overflow: hidden;
-      }
-      #blocklyDiv {
-        height: 99%;
-      }
-    </style>
+    html,
+    body {
+      height: 100%;
+      margin: 0;
+    }
+
+    body {
+      background-color: #fff;
+      font-family: sans-serif;
+      overflow: hidden;
+    }
+
+    #blocklyDiv {
+      height: 80%;
+    }
+  </style>
 </head>
+
 <body>
   <div id='blocklyDiv'></div>
+  <input type="button" id="kintoneBlocklyToJsButton" value="to Javascript"></input>
+  <input type="button" id="kintoneBlocklyToXmlButton" value="to XML"></input>
 </body>
+
 </html>
