--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
 </head>
 
 <body>
+  <div id='app'></div>
   <div id='blocklyDiv'></div>
   <input type="button" id="kintoneBlocklyToJsButton" value="to Javascript"></input>
   <input type="button" id="kintoneBlocklyToXmlButton" value="to XML"></input>
