--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,9 @@
 </head>
 
 <body>
-  <div id='app'></div>
+  <div class="gaia-argoui-app-toolbar-menu">
+    <div class="gaia-argoui-app-menu-settings"></div>
+  </div>
 </body>
 
 </html>
