ローカルで動くようにテストデータ追加

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,37 @@
 
 <head>
   <meta charset="UTF-8" />
+  <script>
+    // テストデータ
+    cybozu = {
+      data: {
+        page: {
+          FORM_DATA: {
+            schema: {
+              table: {
+                fieldList: {
+                  数値_code: {
+                    id: '1',
+                    label: '数値',
+                    type: 'number',
+                    var: '数値_code',
+                    properties: {}
+                  },
+                  文字列_code: {
+                    id: '2',
+                    label: '文字列',
+                    type: 'string',
+                    var: '文字列_code',
+                    properties: {}
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    };
+  </script>
   <script defer src="main.js"></script>
   <style>
     html,
