成果物のファイル名をいい感じに修正

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
         },
       };
     </script>
-    <script defer src="main.js"></script>
+    <script defer src="kintone-blockly.js"></script>
     <style>
       html,
       body {
